More  images for a new feature

--- a/index.html
+++ b/index.html
@@ -98,6 +98,250 @@
           </div>
         </div>
       </div>
+
+      <!-- <div class="flex space-x-3 overflow-scroll scrollbar-hide p-3 ml-3">
+        <div
+          class="
+            cursor-pointer
+            hover:scale-105
+            transform
+            transition
+            duration-300
+            ease-out
+          "
+        >
+          <div class="relative h-80 w-80 bg-ur">
+            <span
+            class="translate-y-8"
+              style="
+                box-sizing: border-box;
+                display: block;
+                overflow: hidden;
+                width: initial;
+                height: initial;
+                background: none;
+                opacity: 1;
+                border: 0;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+              "
+            >
+              <img
+                src="/img/paris.jpg"
+                decoding="async"
+                data-nimg="fill"
+                class="rounded-lg"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  bottom: 0;
+                  right: 0;
+                  box-sizing: border-box;
+                  padding: 0;
+                  border: none;
+                  margin: auto;
+                  display: block;
+                  width: 0;
+                  height: 0;
+                  min-width: 100%;
+                  max-width: 100%;
+                  min-height: 100%;
+                  max-height: 100%;
+                "
+                sizes="100vw"
+            /></span>
+          </div>
+          <h3 class="text-2xl mt-3 opacity-50 hover:opacity-100 ">Paris</h3>
+          <h4 class="text-md mt-3">24 Locations</h4>
+        </div>
+        <div
+          class="
+            cursor-pointer
+            hover:scale-105
+            transform
+            transition
+            duration-300
+            ease-out
+          "
+        >
+          <div class="relative h-80 w-80 bg-ur">
+            <span
+              style="
+                box-sizing: border-box;
+                display: block;
+                overflow: hidden;
+                width: initial;
+                height: initial;
+                background: none;
+                opacity: 1;
+                border: 0;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+              "
+            >
+              <img
+                src="/img/taj.jpg"
+                decoding="async"
+                data-nimg="fill"
+                class="rounded-lg"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  bottom: 0;
+                  right: 0;
+                  box-sizing: border-box;
+                  padding: 0;
+                  border: none;
+                  margin: auto;
+                  display: block;
+                  width: 0;
+                  height: 0;
+                  min-width: 100%;
+                  max-width: 100%;
+                  min-height: 100%;
+                  max-height: 100%;
+                "
+                sizes="100vw"
+            /></span>
+          </div>
+          <h3 class="text-2xl mt-3">India</h3>
+          <h4 class="text-md mt-3">24 Locations</h4>
+        </div>
+        <div
+          class="
+            cursor-pointer
+            hover:scale-105
+            transform
+            transition
+            duration-300
+            ease-out
+          "
+        >
+          <div class="relative h-80 w-80 bg-ur">
+            <span
+              class="translate-y-8"
+              style="
+                box-sizing: border-box;
+                display: block;
+                overflow: hidden;
+                width: initial;
+                height: initial;
+                background: none;
+                opacity: 1;
+                border: 0;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+              "
+            >
+              <img
+                src="/img/tokyo.jpg"
+                decoding="async"
+                data-nimg="fill"
+                class="rounded-lg"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  bottom: 0;
+                  right: 0;
+                  box-sizing: border-box;
+                  padding: 0;
+                  border: none;
+                  margin: auto;
+                  display: block;
+                  width: 0;
+                  height: 0;
+                  min-width: 100%;
+                  max-width: 100%;
+                  min-height: 100%;
+                  max-height: 100%;
+                "
+                sizes="100vw"
+            /></span>
+          </div>
+          <h3 class="text-2xl mt-3 translate-y-8">Japan</h3>
+          <h4 class="text-md mt-3 translate-y-8">24 Locations</h4>
+        </div>
+        <div
+          class="
+            cursor-pointer
+            hover:scale-105
+            transform
+            transition
+            duration-300
+            ease-out
+          "
+        >
+          <div class="relative h-80 w-80 bg-ur">
+            <span
+              class="bg-[url('/img/hero.jpg')]"
+              style="
+                box-sizing: border-box;
+                display: block;
+                overflow: hidden;
+                width: initial;
+                height: initial;
+                background: none;
+                opacity: 1;
+                border: 0;
+                margin: 0;
+                padding: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+              "
+            >
+              <img
+                src="/img/canada.jpg"
+                decoding="async"
+                data-nimg="fill"
+                class="rounded-lg"
+                style="
+                  position: absolute;
+                  top: 0;
+                  left: 0;
+                  bottom: 0;
+                  right: 0;
+                  box-sizing: border-box;
+                  padding: 0;
+                  border: none;
+                  margin: auto;
+                  display: block;
+                  width: 0;
+                  height: 0;
+                  min-width: 100%;
+                  max-width: 100%;
+                  min-height: 100%;
+                  max-height: 100%;
+                "
+                sizes="100vw"
+            /></span>
+          </div>
+          <h3 class="text-2xl mt-3">Canada</h3>
+          <h4 class="text-md mt-3">24 Locations</h4>
+        </div>
+      </div> -->
+
+
       <div class="mt-4 sm:flex sm:space-x-6 px-4 sm:px-0">
         <div
           class="
@@ -163,7 +407,14 @@
       </div>
 
       <div class="mt-4 sm:flex sm:space-x-6">
-        <div class="mb-4 sm:mb-0 sm:w-9/12 sm:flex sm:flex-col space-y-16 sm:space-y-4">
+        <div
+          class="
+            mb-4
+            sm:mb-0 sm:w-9/12 sm:flex sm:flex-col
+            space-y-16
+            sm:space-y-4
+          "
+        >
           <div class="sm:flex sm:space-x-6 mb-4">
             <div
               class="
@@ -255,7 +506,18 @@
               </p>
             </div>
           </div>
-          <div class="pagination flex space-x-3 font-medium text-sm px-4 sm:px-0 mt-16">
+          <div
+            class="
+              pagination
+              flex
+              space-x-3
+              font-medium
+              text-sm
+              px-4
+              sm:px-0
+              mt-16
+            "
+          >
             <div class="active border bg-blue-900 text-white px-3 py-1">1</div>
             <div class="border text-blue-900 px-3 py-1">2</div>
             <div class="border text-blue-900 px-3 py-1">...</div>
@@ -288,7 +550,14 @@
               </div>
               <a
                 href="#"
-                class="things_to_do text-[#00CD92] underline text-2xl pb-2 sm:pb-0"
+                class="
+                  things_to_do
+                  text-[#00CD92]
+                  underline
+                  text-2xl
+                  pb-2
+                  sm:pb-0
+                "
               >
                 Things To Do in San Diego
               </a>
@@ -300,8 +569,9 @@
         </div>
         <aside
           class="
-            mb-4 mt-10 sm:mt-0
-            sm:mb-0 sm:w-3/12
+            mb-4
+            mt-10
+            sm:mt-0 sm:mb-0 sm:w-3/12
             flex flex-col
             space-y-3
             pl-0
