--- a/index.html
+++ b/index.html
@@ -92,255 +92,12 @@
               <input
                 type="text"
                 placeholder="Search ..."
-                class="px-1 py-3 rounded-lg"
+                class="px-1 py-3 rounded-lg text-black"
               />
             </div>
           </div>
         </div>
       </div>
-
-      <!-- <div class="flex space-x-3 overflow-scroll scrollbar-hide p-3 ml-3">
-        <div
-          class="
-            cursor-pointer
-            hover:scale-105
-            transform
-            transition
-            duration-300
-            ease-out
-          "
-        >
-          <div class="relative h-80 w-80 bg-ur">
-            <span
-            class="translate-y-8"
-              style="
-                box-sizing: border-box;
-                display: block;
-                overflow: hidden;
-                width: initial;
-                height: initial;
-                background: none;
-                opacity: 1;
-                border: 0;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-              "
-            >
-              <img
-                src="/img/paris.jpg"
-                decoding="async"
-                data-nimg="fill"
-                class="rounded-lg"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  bottom: 0;
-                  right: 0;
-                  box-sizing: border-box;
-                  padding: 0;
-                  border: none;
-                  margin: auto;
-                  display: block;
-                  width: 0;
-                  height: 0;
-                  min-width: 100%;
-                  max-width: 100%;
-                  min-height: 100%;
-                  max-height: 100%;
-                "
-                sizes="100vw"
-            /></span>
-          </div>
-          <h3 class="text-2xl mt-3 opacity-50 hover:opacity-100 ">Paris</h3>
-          <h4 class="text-md mt-3">24 Locations</h4>
-        </div>
-        <div
-          class="
-            cursor-pointer
-            hover:scale-105
-            transform
-            transition
-            duration-300
-            ease-out
-          "
-        >
-          <div class="relative h-80 w-80 bg-ur">
-            <span
-              style="
-                box-sizing: border-box;
-                display: block;
-                overflow: hidden;
-                width: initial;
-                height: initial;
-                background: none;
-                opacity: 1;
-                border: 0;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-              "
-            >
-              <img
-                src="/img/taj.jpg"
-                decoding="async"
-                data-nimg="fill"
-                class="rounded-lg"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  bottom: 0;
-                  right: 0;
-                  box-sizing: border-box;
-                  padding: 0;
-                  border: none;
-                  margin: auto;
-                  display: block;
-                  width: 0;
-                  height: 0;
-                  min-width: 100%;
-                  max-width: 100%;
-                  min-height: 100%;
-                  max-height: 100%;
-                "
-                sizes="100vw"
-            /></span>
-          </div>
-          <h3 class="text-2xl mt-3">India</h3>
-          <h4 class="text-md mt-3">24 Locations</h4>
-        </div>
-        <div
-          class="
-            cursor-pointer
-            hover:scale-105
-            transform
-            transition
-            duration-300
-            ease-out
-          "
-        >
-          <div class="relative h-80 w-80 bg-ur">
-            <span
-              class="translate-y-8"
-              style="
-                box-sizing: border-box;
-                display: block;
-                overflow: hidden;
-                width: initial;
-                height: initial;
-                background: none;
-                opacity: 1;
-                border: 0;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-              "
-            >
-              <img
-                src="/img/tokyo.jpg"
-                decoding="async"
-                data-nimg="fill"
-                class="rounded-lg"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  bottom: 0;
-                  right: 0;
-                  box-sizing: border-box;
-                  padding: 0;
-                  border: none;
-                  margin: auto;
-                  display: block;
-                  width: 0;
-                  height: 0;
-                  min-width: 100%;
-                  max-width: 100%;
-                  min-height: 100%;
-                  max-height: 100%;
-                "
-                sizes="100vw"
-            /></span>
-          </div>
-          <h3 class="text-2xl mt-3 translate-y-8">Japan</h3>
-          <h4 class="text-md mt-3 translate-y-8">24 Locations</h4>
-        </div>
-        <div
-          class="
-            cursor-pointer
-            hover:scale-105
-            transform
-            transition
-            duration-300
-            ease-out
-          "
-        >
-          <div class="relative h-80 w-80 bg-ur">
-            <span
-              class="bg-[url('/img/hero.jpg')]"
-              style="
-                box-sizing: border-box;
-                display: block;
-                overflow: hidden;
-                width: initial;
-                height: initial;
-                background: none;
-                opacity: 1;
-                border: 0;
-                margin: 0;
-                padding: 0;
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                right: 0;
-              "
-            >
-              <img
-                src="/img/canada.jpg"
-                decoding="async"
-                data-nimg="fill"
-                class="rounded-lg"
-                style="
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  bottom: 0;
-                  right: 0;
-                  box-sizing: border-box;
-                  padding: 0;
-                  border: none;
-                  margin: auto;
-                  display: block;
-                  width: 0;
-                  height: 0;
-                  min-width: 100%;
-                  max-width: 100%;
-                  min-height: 100%;
-                  max-height: 100%;
-                "
-                sizes="100vw"
-            /></span>
-          </div>
-          <h3 class="text-2xl mt-3">Canada</h3>
-          <h4 class="text-md mt-3">24 Locations</h4>
-        </div>
-      </div> -->
-
 
       <div class="mt-4 sm:flex sm:space-x-6 px-4 sm:px-0">
         <div
@@ -834,43 +591,92 @@
           </ul>
         </aside>
       </div>
+
       <div class="mt-12 px-4 sm:px-0">
         <header class="font-medium text-xl sm:text-2xl text-gray-800">
           Follow The Adventures
         </header>
-        <div class="mt-6 sm:flex">
+        <div
+          class="
+            mt-6
+            grid grid-cols-1
+            sm:grid-rows-2 sm:grid-flow-col sm:grid-cols-2
+            gap-4
+          "
+        >
           <div
             class="
-              sm:w-1/4
+              sm:row-span-2 sm:col-span-1
               h-96
-              sm:h-80
+              sm:h-auto
               bg-gray-300 bg-[url('/img/india2.jpg')] bg-cover bg-center
+              text-white text-2xl
+              font-light
+              p-6
+              hover:scale-105
+              transform
+              transition
+              duration-300
+              ease-out
             "
-          ></div>
+          >
+            India
+          </div>
           <div
             class="
-              sm:w-1/4
+              sm:row-span-1 sm:col-span-2
               h-96
-              sm:h-80
+              sm:h-auto
               bg-gray-300 bg-[url('/img/lioncity.jpg')] bg-cover bg-center
+              text-white text-2xl
+              font-light
+              p-6
+              hover:scale-105
+              transform
+              transition
+              duration-300
+              ease-out
             "
-          ></div>
+          >
+            Singapore
+          </div>
           <div
             class="
-              sm:w-1/4
+              sm:row-span-1 sm:col-span-1
               h-96
-              sm:h-80
+              sm:h-auto sm:w-auto
               bg-gray-300 bg-[url('/img/indiagate.jpg')] bg-cover bg-center
+              text-white text-2xl
+              font-light
+              p-6
+              hover:scale-105
+              transform
+              transition
+              duration-300
+              ease-out
             "
-          ></div>
+          >
+            Pakistan
+          </div>
           <div
             class="
-              sm:w-1/4
+              row-span-1
+              col-span-1
               h-96
-              sm:h-80
+              sm:h-auto sm:w-auto
               bg-gray-300 bg-[url('/img/china1.jpg')] bg-cover bg-left
+              text-white text-2xl
+              font-light
+              p-6
+              hover:scale-105
+              transform
+              transition
+              duration-300
+              ease-out
             "
-          ></div>
+          >
+            China
+          </div>
         </div>
         <div
           class="
