--- a/index.html
+++ b/index.html
@@ -172,7 +172,19 @@
             sm:space-y-4
           "
         >
-          <div class="sm:flex sm:space-x-6 mb-4">
+          <div
+            class="
+              sm:flex sm:space-x-6
+              mb-4
+              rounded-lg
+              transform
+              transition
+              hover:scale-105
+              duration-200
+              ease-out
+              pr-6
+            "
+          >
             <div
               class="
                 img
@@ -222,7 +234,19 @@
               </p>
             </div>
           </div>
-          <div class="sm:flex sm:space-x-6 mb-4">
+          <div
+            class="
+              sm:flex sm:space-x-6
+              mb-4
+              rounded-lg
+              transform
+              transition
+              hover:scale-105
+              duration-200
+              ease-out
+              pr-6
+            "
+          >
             <div
               class="
                 img
