--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img
           class="max-w-full nav-row-logo"
           loading="lazy"
-          src="/img/header_logo.svg"
+          src="img/header_logo.svg"
           alt="rentByOwner"
           width="182"
           height="26"
@@ -75,7 +75,7 @@
           hero
           relative
           h-[425px]
-          bg-[url('/img/hero.jpg')] bg-cover bg-center
+          bg-[url('img/hero.jpg')] bg-cover bg-center
           mt-2
           mx-4
           sm:mx-0
@@ -108,7 +108,7 @@
             justify-between
             text-white
             font-medium
-            bg-[url('/img/sedona.jpg')] bg-cover bg-center
+            bg-[url('img/sedona.jpg')] bg-cover bg-center
             p-4
             h-60
             sm:h-72
@@ -128,7 +128,7 @@
             justify-between
             text-white
             font-medium
-            bg-gray-300 bg-[url('/img/tybee.jpg')] bg-cover bg-center
+            bg-gray-300 bg-[url('img/tybee.jpg')] bg-cover bg-center
             p-4
             h-60
             sm:h-72
@@ -203,7 +203,7 @@
               <img
                 class="w-4/5"
                 loading="lazy"
-                src="/img/header_logo.svg"
+                src="img/header_logo.svg"
                 alt="rentByOwner"
                 width="182"
                 height="26"
@@ -259,7 +259,7 @@
                 items-center
                 justify-center
                 rounded-xl
-                bg-[url('/img/sarasota.jpg')] bg-cover bg-center
+                bg-[url('img/sarasota.jpg')] bg-cover bg-center
               "
             ></div>
             <div
@@ -633,7 +633,7 @@
               sm:row-span-2 sm:col-span-1
               h-96
               sm:h-auto
-              bg-gray-300 bg-[url('/img/india2.jpg')] bg-cover bg-center
+              bg-gray-300 bg-[url('img/india2.jpg')] bg-cover bg-center
               text-white text-2xl
               font-light
               p-6
@@ -651,7 +651,7 @@
               sm:row-span-1 sm:col-span-2
               h-96
               sm:h-auto
-              bg-gray-300 bg-[url('/img/lioncity.jpg')] bg-cover bg-center
+              bg-gray-300 bg-[url('img/lioncity.jpg')] bg-cover bg-center
               text-white text-2xl
               font-light
               p-6
@@ -669,7 +669,7 @@
               sm:row-span-1 sm:col-span-1
               h-96
               sm:h-auto sm:w-auto
-              bg-gray-300 bg-[url('/img/indiagate.jpg')] bg-cover bg-center
+              bg-gray-300 bg-[url('img/indiagate.jpg')] bg-cover bg-center
               text-white text-2xl
               font-light
               p-6
@@ -688,7 +688,7 @@
               col-span-1
               h-96
               sm:h-auto sm:w-auto
-              bg-gray-300 bg-[url('/img/china1.jpg')] bg-cover bg-left
+              bg-gray-300 bg-[url('img/china1.jpg')] bg-cover bg-left
               text-white text-2xl
               font-light
               p-6
